# swimmies

./: .gitignore  DOCKER_DEMO.md  Dockerfile  FUTURE_FEATURES.md  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: discovery_example.py  docker_discovery.py
src/swimmies/: __init__.py  core.py  discovery.py  gossip.py  swim.py
tests/: __init__.py  test_core.py  test_discovery.py  test_gossip.py  test_swim.py
