[project]
name = "swimmies"
version = "0.1.1" 
description = "Core utilities and gossip protocol implementation for Joyride DNS Service"
readme = "README.md"
authors = [
    { name = "mike", email = "219478+ilude@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
swimmies = "swimmies:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
