[project]
name = "swimmies"
version = "0.1.1" 
description = "Core utilities and gossip protocol implementation for Joyride DNS Service"
readme = "README.md"
authors = [
    { name = "mike", email = "219478+ilude@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
swimmies = "swimmies:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
